z-index issue for float bat.

--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -1161,7 +1161,7 @@ body > .ui-autocomplete{
     position: relative;
     height: 40px;
     display: block;
-	z-index: 0;
+	z-index: 10;
     .view-toolbar-container{
         z-index:222222;
         position:fixed !important;
